# sawyerDemo

./: .gitignore  .gitmodules  box.scene  external.repos.yaml
.docker/: Dockerfile  Dockerfile_part1  Dockerfile_part2  docker-compose.yaml  ros_entrypoint.sh
camera_state_publisher/: CMakeLists.txt
camera_tranform/: package.xml
color_detector/scripts/: color_detector.py
controller/: package.xml
controller/scripts/: joy_controller.py
custom_sawyer_description/: CMakeLists.txt  package.xml
custom_sawyer_description/config/: sawyer.rviz
custom_sawyer_description/launch/: sawyer_description.launch
custom_sawyer_description/urdf/: custom_robot.urdf  sawyer.urdf.xacro  sawyer_base.urdf.xacro  sawyer_base_fixed.urdf.xacro  sawyer_electric_gripper_fixed.urdf.xacro  sawyer_fixed.urdf.xacro
dynamics/launch/: real_dynamics.launch
dynamics/src/: Robot.cpp  Sawyer.h  yumi_robot_node.cpp
grab_blocks/: CMakeLists.txt
grab_blocks/scripts/: grab_blocks.py
gripper/: CMakeLists.txt  package.xml
gripper/launch/: grab_blocks.launch
gripper/scripts/: gripper_listener.py
joint_playback/: trajectory
sawyer_description/urdf/: rethink_electric_gripper_fixed.xacro
sawyer_launch/: package.xml
sawyer_launch/launch/: sawyer.launch
sawyer_state_publisher/: package.xml
sawyer_state_publisher/src/: joint_state_listener.cpp
src/: .gitignore
src/camera_state_publisher/: package.xml
src/dynamics/: CMakeLists.txt
src/dynamics/launch/: sawyer.launch
src/dynamics/src/: ROSProvider.h  Robot.cpp  Robot.h  Sawyer.h  Yumi.h  sawyer_robot_node.cpp
(+37 files in other folders)
